crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__comptime_fn.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "item_test(\"comptime fun Test() {}\")"
---
SOURCE_FILE@0..=21
    FUNC_ITEM@0..=21
        comptime |KW_COMPTIME@0..7
          |WHITESPACE@8..8
        fun |KW_FUN@9..11
          |WHITESPACE@12..12
        Test |IDENT@13..16
        FUNC_PARAM@17..=18
            ( |L_PAREN@17..17
            ) |R_PAREN@18..18
          |WHITESPACE@19..19
        BLOCK_EXPR@20..=21
            { |L_BRACE@20..20
            } |R_BRACE@21..21
