crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__comptime_type_p_impl.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "item_test(\"impl comptime 2 + 3 for comptime 4 + 5 {}\")"
---
SOURCE_FILE@0..=40
    IMPL_ITEM@0..=40
        impl |KW_IMPL@0..3
          |WHITESPACE@4..4
        IMPL_TRAIT@5..=22
            COMPTIME_TYPE@5..=19
                COMPTIME_EXPR@5..=19
                    comptime |KW_COMPTIME@5..12
                      |WHITESPACE@13..13
                    BIN_EXPR@14..=19
                        PAT_EXPR@14..=14
                            LIT_PAT@14..=14
                                2 |INT@14..14
                          |WHITESPACE@15..15
                        + |PLUS@16..16
                          |WHITESPACE@17..17
                        PAT_EXPR@18..=18
                            LIT_PAT@18..=18
                                3 |INT@18..18
                          |WHITESPACE@19..19
            for |KW_FOR@20..22
          |WHITESPACE@23..23
        COMPTIME_TYPE@24..=38
            COMPTIME_EXPR@24..=38
                comptime |KW_COMPTIME@24..31
                  |WHITESPACE@32..32
                BIN_EXPR@33..=38
                    PAT_EXPR@33..=33
                        LIT_PAT@33..=33
                            4 |INT@33..33
                      |WHITESPACE@34..34
                    + |PLUS@35..35
                      |WHITESPACE@36..36
                    PAT_EXPR@37..=37
                        LIT_PAT@37..=37
                            5 |INT@37..37
                      |WHITESPACE@38..38
        { |L_BRACE@39..39
        } |R_BRACE@40..40

