crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__equality.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"a == b != c\")"
---
SOURCE_FILE@0..=10
    EXPR_STMT@0..=10
        BIN_EXPR@0..=10
            BIN_EXPR@0..=6
                PAT_EXPR@0..=0
                    IDENT_PAT@0..=0
                        a |IDENT@0..0
                  |WHITESPACE@1..1
                == |EQEQ@2..3
                  |WHITESPACE@4..4
                PAT_EXPR@5..=5
                    IDENT_PAT@5..=5
                        b |IDENT@5..5
                  |WHITESPACE@6..6
            != |NEQ@7..8
              |WHITESPACE@9..9
            PAT_EXPR@10..=10
                IDENT_PAT@10..=10
                    c |IDENT@10..10

