crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__fn_with_whitespace.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "item_test(\"fun hello() {\\n    \\n\\n}\")"
---
SOURCE_FILE@0..=20
    FUNC_ITEM@0..=20
        fun |KW_FUN@0..2
          |WHITESPACE@3..3
        hello |IDENT@4..8
        FUNC_PARAM@9..=10
            ( |L_PAREN@9..9
            ) |R_PAREN@10..10
          |WHITESPACE@11..11
        BLOCK_EXPR@12..=20
            { |L_BRACE@12..12
            
 |NL@13..13
                 |WHITESPACE@14..17
            
 |NL@18..18
            
 |NL@19..19
            } |R_BRACE@20..20

